--- a/composer.json
+++ b/composer.json
@@ -18,24 +18,24 @@
     ],
     "require": {
         "php": "^7.0",
-        "symfony/console": "^3.2",
+        "symfony/console": "^4.0",
         "tightenco/collect": "^5.4",
-        "symfony/process": "^3.2",
-        "symfony/yaml": "^3.3",
+        "symfony/process": "^4.0",
+        "symfony/yaml": "^4.0",
         "webmozart/assert": "^1.2",
         "php-di/php-di": "^5.4"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.7",
-        "phpmd/phpmd": "^2.5",
-        "phploc/phploc": "^3.0",
-        "sebastian/phpcpd": "^2.0",
+        "phpunit/phpunit": "~7.0",
+        "phpmd/phpmd": "^2.6",
+        "phploc/phploc": "^4.0",
+        "sebastian/phpcpd": "~4.0.0",
         "sensiolabs/security-checker": "^4.0",
-        "slevomat/coding-standard": "^2.0",
+        "slevomat/coding-standard": "^4.4.8",
         "jakub-onderka/php-console-highlighter": "^0.3.2",
         "jakub-onderka/php-parallel-lint": "^0.9.2",
         "larapack/dd": "^1.1",
-        "bmitch/codor": "^1.0",
+        "bmitch/codor": "dev-master",
         "mockery/mockery": "dev-master"
     },
     "autoload": {
